<resources>
    <string name="app_name">MiTaller</string>
    <string name="title_receipt_detail">Detalle Factura</string>
    <string name="title_add_receipt">Añadir Factura</string>
    <string name="title_add_receipt_concept">Añadir Concepto</string>
    <string name="title_edit_receipt">Editar Factura</string>


    <string name="card_receipt_label">Factura</string>
    <string name="card_receipt_number">Número</string>
    <string name="card_receipt_date">Fecha</string>
    <string name="card_receipt_client">Cliente</string>
    <string name="card_receipt_client_name">Nombre</string>
    <string name="card_receipt_client_nif">NIF</string>
    <string name="card_receipt_client_address">Dirección</string>
    <string name="card_receipt_device">Aparato</string>
    <string name="card_receipt_device_subject">Asunto</string>
    <string name="card_receipt_device_brand">Marca</string>
    <string name="card_receipt_device_model">Modelo</string>
    <string name="card_receipt_device_serial">Nº de Serie</string>
    <string name="card_receipt_amounts_sub_total">Sub-Total</string>
    <string name="card_receipt_amounts_igic">I.G.I.C 7%</string>
    <string name="card_receipt_amounts_total">Total</string>


    <string name="receipt_total_format">%.2f €</string>
    <string name="receipt_item_count_format">%1$s x %2$.2f €</string>
    <string name="cared_edit_receipt_client_name_hint">Nombre del cliente</string>
    <string name="cared_edit_receipt_client_nif_hint">Nif del cliente</string>
    <string name="cared_edit_receipt_client_address_hint">Dirección del cliente</string>
    <string name="cared_edit_receipt_device_subject_hint">Asunto del aparato</string>
    <string name="cared_edit_receipt_device_brand_hint">Marca del aparato</string>
    <string name="cared_edit_receipt_device_model_hint">Modelo del aparato</string>
    <string name="cared_edit_receipt_device_serial_hint">Nº de serie del aparato</string>
    <string name="fragment_add_receipt_back">Atrás</string>
    <string name="fragment_add_receipt_next">Siguiente</string>
    <string name="fragment_add_receipt_save">Guardar</string>
    <string name="card_receipt_concept">CONCEPTO</string>
    <string name="card_receipt_concept_code">Código</string>
    <string name="card_receipt_concept_description">Descripción</string>
    <string name="card_receipt_concept_count">Cantidad</string>
    <string name="card_receipt_concept_amount">Precio</string>
    <string name="edit_receipt_concept_code_hint">Código del concepto</string>
    <string name="edit_receipt_concept_description_hint">Descripción del concepto</string>
    <string name="edit_receipt_concept_count_hint">Cantidad</string>
    <string name="edit_receipt_concept_amount_hint">Precio</string>
    <string name="card_receipt_concept_total">Total</string>
    <string name="card_receipt_client_first_last_name">Primer Apellido</string>
    <string name="cared_edit_receipt_client_last_name_hint">Apellido del cliente</string>
    <string name="card_receipt_client_second_last_name">Segundo Apellido</string>
    <string name="menu_add_receipt_save">Guardar</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_repair_order">Ordenes de reparación</string>
    <string name="drawer_receipt">Facturas</string>
    <string name="title_add_repair_order">Añadir orden de reparación</string>
    <string name="title_edit_repair_order">Editar orden de reparación</string>
    <string name="title_detail_repair_order">Detalle Orden de reparación</string>
    <string name="menu_delete_repair_order">Eliminar orden de reparación</string>
    <string name="menu_delete_receipt">Eliminar presupuesto</string>
    <string name="menu_create_receipt">Crear Factura</string>
    <string name="title_repair_orders">Ordenes de reparación</string>
    <string name="title_receipts">Facturas</string>
    <string name="delete_repair_order_warning">¿Realmente deseas eliminar esta orde de reparación?</string>
    <string name="delete_receipt_warning">¿Realmente deseas eliminar esta factura?</string>
    <string name="repair_order_title">Orden de reparación</string>
    <string name="card_receipt_photo">Foto</string>
    <string name="card_receipt_photo_add">Añadir foto</string>
    <string name="title_photo">Foto</string>
</resources>
