<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/CardHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/card_receipt_device"/>

            <TextView
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_receipt_device_subject"/>

            <EditText
                style="@style/CardEditContent"
                android:id="@+id/edit_receipt_device_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cared_edit_receipt_device_subject_hint"/>

            <TextView
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_receipt_device_brand"/>

            <EditText
                style="@style/CardEditContent"
                android:id="@+id/edit_receipt_device_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cared_edit_receipt_device_brand_hint"/>

            <TextView
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_receipt_device_model"/>

            <EditText
                style="@style/CardEditContent"
                android:id="@+id/edit_receipt_device_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cared_edit_receipt_device_model_hint"/>

            <TextView
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_receipt_device_serial"/>

            <EditText
                style="@style/CardEditContent"
                android:id="@+id/edit_receipt_device_serial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cared_edit_receipt_device_serial_hint"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</ScrollView>