<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/CardHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/card_receipt_client"/>


            <!-- Name -->
            <TextView
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_receipt_client_name"/>

            <EditText
                style="@style/CardEditContent"
                android:id="@+id/edit_receipt_client_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cared_edit_receipt_client_name_hint"/>

            <!-- First LastName -->
            <TextView
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_receipt_client_first_last_name"/>

            <EditText
                style="@style/CardEditContent"
                android:id="@+id/edit_receipt_client_first_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cared_edit_receipt_client_last_name_hint"/>

            <!-- Second LastName -->
            <TextView
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_receipt_client_second_last_name"/>

            <EditText
                style="@style/CardEditContent"
                android:id="@+id/edit_receipt_client_second_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cared_edit_receipt_client_last_name_hint"/>

            <TextView
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_receipt_client_nif"/>

            <EditText
                style="@style/CardEditContent"
                android:id="@+id/edit_receipt_client_nif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cared_edit_receipt_client_nif_hint"/>

            <TextView
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_receipt_client_address"/>

            <EditText
                style="@style/CardEditContent"
                android:id="@+id/edit_receipt_client_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cared_edit_receipt_client_address_hint"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</ScrollView>