<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/CardHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/card_receipt_device"/>

        <TextView
            style="@style/CardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_receipt_device_subject"/>

        <TextView
            style="@style/CardContent"
            android:id="@+id/receipt_device_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/CardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_receipt_device_brand"/>

        <TextView
            style="@style/CardContent"
            android:id="@+id/receipt_device_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/CardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_receipt_device_model"/>

        <TextView
            style="@style/CardContent"
            android:id="@+id/receipt_device_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/CardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_receipt_device_serial"/>

        <TextView
            style="@style/CardContent"
            android:id="@+id/receipt_device_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v7.widget.CardView>