<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_receipt_label"
                style="@style/CardHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_receipt_label"/>

            <TextView
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_receipt_number"/>

            <TextView
                style="@style/CardContent"
                android:id="@+id/receipt_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/CardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_receipt_date"/>

            <DatePicker
                android:id="@+id/edit_receipt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_extra_mini"
                />

        </LinearLayout>

    </android.support.v7.widget.CardView>
</ScrollView>