<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/receipt_amount_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp"
    android:layout_margin="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="end">

        <TextView
            style="@style/CardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_receipt_amounts_sub_total"
            android:layout_marginTop="@dimen/margin_extra_mini"/>

        <TextView
            style="@style/CardContent"
            android:id="@+id/receipt_sub_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            style="@style/CardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_receipt_amounts_igic"/>

        <TextView
            style="@style/CardContent"
            android:id="@+id/receipt_igic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/CardHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_receipt_amounts_total"/>

        <TextView
            style="@style/CardContentTitle"
            android:id="@+id/receipt_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>